--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         brew update
-        brew install qt cmake create-dmg
+        brew install qt@5 cmake create-dmg
+        brew link --force qt@5
 
     - name: Build Barrier
       run: |
