--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -20,6 +20,10 @@ jobs:
         brew install qt@5 cmake create-dmg
         brew link --force qt@5
 
+    - name: Set release version
+      id: vars
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+        
     - name: Build Barrier
       run: |
         export B_BUILD_TYPE=Release
@@ -43,7 +47,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: barrier-macos-dmg
-        path: dist/barrier-macos.dmg
+        path: ./build/bin/Barrier-${{ env.RELEASE_VERSION }}-release.dmg
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
