Update path for macOS DMG artifact upload

--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -73,7 +73,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: barrier-macos-dmg
-        path: dist/barrier-macos-*.dmg
+        path: /Users/runner/work/barrier/barrier/master.dmg
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v2
